examples/type_system/failing/93_hm_match_arm_contextual_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/93_hm_match_arm_contextual_mismatch.flx
// error[E300]: Match Arm Type Mismatch
//
// The arms of this `match` expression do not agree on a type.
//
//   examples/type_system/failing/93_hm_match_arm_contextual_mismatch.flx:37:18
//    |
// 36 |         true -> 1,
//    |                 - first arm returns `Int`
//
//    |                 - this arm established the expected type
// 37 |         false -> "no",
//    |                  ^^^^
//    |                  ---- arm 2 has type `String`
//
//    |                  ---- arm 2 conflicts with that type
//
// Note:
//   first arm type: Int
//   this arm type: String
//   the first arm fixes the type expected from the whole `match`
//   this arm produces the competing type
//
// Help:
//   Change arm 2 so every arm returns the same type.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

// E300: concrete match arms now report contextual mismatch diagnostics with dual labels.
fn main() -> Unit {
    let _x = match true {
        true -> 1,
        false -> "no",
    }
}
